test_cases/pass/p48.lxr
SCRIPT AREA
START SCRIPT
DECLARE STRING name
SCAN: name
PRINT: "Welcome, " & name & "!"
END SCRIPT