test_cases/fail/f15.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
SCAN x
END SCRIPT
